--- a/qiyexiaohao/addContact.html
+++ b/qiyexiaohao/addContact.html
@@ -106,7 +106,7 @@
 									_.back();
 								},500)
 							}, function(e) {
-								_.toast("获取电话簿失败 " + e.message);
+								_.toast("获取联系人失败 " + e.message);
 							});
 						}
 					}
