--- a/qiyexiaohao/center/myOtherNumber.html
+++ b/qiyexiaohao/center/myOtherNumber.html
@@ -186,8 +186,14 @@
 						u.mypost(pdata, stringSignTemp, true, function(data) {
 							if(data.status == 0) {
 								self.dataList = data.data;
-								var virtual_number = data.data[0] && data.data[0].number;
-								w.setItem("virtual_number",virtual_number);
+								var arr = data.data || [];
+								var numbers = [];
+								for (var i = 0; i < arr.length; i++) {
+									numbers.push(arr[i].number);
+								}
+								console.log("numbers====data" +  JSON.stringify(numbers));
+								var numbers = numbers.join('-');
+								w.setItem("virtual_number",numbers);//缓存小号
 							} else {
 								_.toast(data.msg || '请求异常');
 							}
