--- a/qiyexiaohao/loginOfC.html
+++ b/qiyexiaohao/loginOfC.html
@@ -81,9 +81,7 @@
 					},
 					getMyNumber: function() {//获取虚拟小号
 						var nonce_str = u.mathRand();
-						console.log("nonce_str====" + nonce_str);
 						var timestamp = Date.parse(new Date()).toString().substr(0, 8);
-						console.log("timestamp====" + timestamp);
 						var identifier = w.getItem("identifier"); //设备标识号
 						var user_token = w.getItem("user_token");
 						var pdata = {
@@ -98,9 +96,13 @@
 						var stringSignTemp = "app=Member&class=getMyNumber&client=web&identifier=" + identifier + "&nonce_str=" + nonce_str + "&timestamp=" + timestamp + "&user_token="+user_token+"&";
 						u.mypost(pdata, stringSignTemp, true, function(data) {
 							if(data.status == 0) {
-								var virtual_number = data.data[0] && data.data[0].number;
-								w.setItem("virtual_number",virtual_number);
-								console.log("virtual_number==" +virtual_number);
+								var arr = data.data || [];
+								var numbers = [];
+								for (var i = 0; i < arr.length; i++) {
+									numbers.push(arr[i].number);
+								}
+								var numbers = numbers.join('-');
+								w.setItem("virtual_number",numbers);
 							} else {
 								_.toast(data.msg || '请求异常');
 							}
